--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,8 +14,7 @@
     "vue": "^3.2.16",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^4.0.12",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
